force-app/main/default/objects/Developer__c/Developer__c.object-meta.xml
<CustomObject>
    <label>Desenvolvedor</label>
    <nameField>
        <label>Develope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desenvolvedor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>