force-app/main/default/objects/Developer__c/fields/Certificacoes__c.field-meta.xml
<CustomField>
    <fullName>Certificacoes__c</fullName>
    <label>Certificacoes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>