force-app/main/default/objects/Developer__c/fields/Disponivel__c.field-meta.xml
<CustomField>
    <fullName>Disponivel__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Está disponível?</inlineHelpText>
    <label>Disponivel</label>
    <type>Checkbox</type>
</CustomField>