force-app/main/default/objects/Developer__c/fields/Senioridade__c.field-meta.xml
<CustomField>
    <fullName>Senioridade__c</fullName>
    <label>Senioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Pleno</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Arquiteto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>